--- a/templates/default/login.twig
+++ b/templates/default/login.twig
@@ -36,15 +36,11 @@
 
 			<div class="form-floating">
 				<input type="text" name="username" class="form-control" id="floatingUsername" placeholder="name@example.com">
-				<label for="floatingUsername"><svg class="bi" width="24" height="24" fill="currentColor">
-					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-fill"/>
-				</svg> {{ __("Username") }}</label>
+				<label for="floatingUsername">{{ icon('person-fill', 24) }} {{ __("Username") }}</label>
 			</div>
 			<div class="form-floating">
 				<input type="password" name="password" class="form-control" id="floatingLabel" placeholder="Password">
-				<label for="floatingLabel"><svg class="bi" width="24" height="24" fill="currentColor">
-					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#key-fill"/>
-				</svg> {{ __("Password") }}</label>
+				<label for="floatingLabel">{{ icon('key-fill', 24) }} {{ __("Password") }}</label>
 			</div>
 			<br>
 			<input class="w-100 btn btn-lg btn-primary" type="submit" value="{{ __("Login") }}" name="loginsubmit">
