--- a/templates/default/register.twig
+++ b/templates/default/register.twig
@@ -19,30 +19,22 @@
 <div class="form-signin god-is-dead text-center">
 	<div class="form-floating">
 		<input type="text" name="username" class="form-control" id="floatingUsername" placeholder="">
-		<label for="floatingUsername"><svg class="bi" width="24" height="24" fill="currentColor">
-			<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-fill"></use>
-			</svg> {{ __("Username") }}
+		<label for="floatingUsername">{{ icon('person-fill', 24) }} {{ __("Username") }}
 		</label>
     </div>
 	<div class="form-floating">
 		<input type="email" name="email" class="form-control" id="floatingEmail" placeholder="">
-		<label for="floatingEmail"><svg class="bi" width="24" height="24" fill="currentColor">
-			<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#mailbox2"></use>
-			</svg> {{ __("E-mail") }}
+		<label for="floatingEmail">{{ icon('mailbox2', 24) }} {{ __("E-mail") }}
 		</label>
     </div>
 	<div class="form-floating">
 		<input type="password" name="pass1" class="form-control" id="floatingPass" placeholder="">
-		<label for="floatingPass"><svg class="bi" width="24" height="24" fill="currentColor">
-			<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#key-fill"></use>
-			</svg> {{ __("Password") }}
+		<label for="floatingPass">{{ icon('key-fill', 24) }} {{ __("Password") }}
 		</label>
     </div>
 	<div class="form-floating">
 		<input type="password" name="pass2" class="form-control" id="floatingPass2" placeholder="">
-		<label for="floatingPass2"><svg class="bi" width="24" height="24" fill="currentColor">
-			<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#key-fill"></use>
-			</svg> {{ __("Password (Again)") }}
+		<label for="floatingPass2">{{ icon('key-fill', 24) }} {{ __("Password (Again)") }}
 		</label>
     </div>
 	<button class="w-100 btn btn-lg btn-primary" type="submit" name="action" class="btn btn-primary">{{ __("Register") }}</button>
