--- a/templates/default/settings.twig
+++ b/templates/default/settings.twig
@@ -10,21 +10,15 @@
 			<button class="nav-link active text-start" id="v-pills-account-tab" data-bs-toggle="pill"
 				data-bs-target="#v-pills-account" type="button" role="tab" aria-controls="v-pills-account"
 				aria-selected="false">
-				<svg class="bi" width="16" height="16" fill="currentColor">
-					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-fill" />
-				</svg> {{ __("Account") }}</button>
+				{{ icon('person-fill', 16) }} {{ __("Account") }}</button>
 			<button class="nav-link text-start" id="v-pills-profile-tab" data-bs-toggle="pill"
 				data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
 				aria-selected="false">
-				<svg class="bi" width="16" height="16" fill="currentColor">
-					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#person-lines-fill" />
-				</svg> {{ __("Profile") }}</button>
+				{{ icon('person-lines-fill', 16) }} {{ __("Profile") }}</button>
 			<button class="nav-link text-start" id="v-pills-partner-tab" data-bs-toggle="pill"
 				data-bs-target="#v-pills-partner" type="button" role="tab" aria-controls="v-pills-partner"
 				aria-selected="false">
-				<svg class="bi" width="16" height="16" fill="currentColor">
-					<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#check2-circle" />
-				</svg> {{ __("Partnership") }}</button>
+				{{ icon('check2-circle', 16) }} {{ __("Partnership") }}</button>
 		</div>
 	</ul>
 </div>
@@ -44,9 +38,7 @@
 								{% if current_user.email == "poktube_migrated@squarebracket.me" %}
 								{{ __("Migrated from PokTube") }}
 								{% else %}
-								<svg class="bi" width="20" height="20" fill="currentColor">
-									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#envelope" />
-								</svg>
+								{{ icon('envelope', 20) }}
 								<b>{{ __("Email address:") }}</b> {{ current_user.email }}
 								{% endif %}
 							</p>
