--- a/templates/default/upload.twig
+++ b/templates/default/upload.twig
@@ -4,8 +4,7 @@
 
 	{% block content %}
 <h1>{{ __("Upload") }}</h1>
-<p><span class="badge bg-warning"><svg class="bi" width="16" height="16" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#exclamation-triangle-fill"/>
-	</svg> {{ __("Warning") }}</span> {{ __("By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.") }}</p>
+<p><span class="badge bg-warning">{{ icon('exclamation-triangle-fill', 16) }} {{ __("Warning") }}</span> {{ __("By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.") }}</p>
 <form name="uploadForm" id="uploadForm" method="post" action="upload.php"
 enctype="multipart/form-data">
 <br>
