--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -26,14 +26,14 @@
 	<div class="p-1 mb-4 bg-custom-profile rounded-3 text-white"> <!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
 		<div class="container-fluid py-4">
 			<div class="row">
-			<div class="col-11">
+			<div class="col-md-11">
 					<img class="float-start rounded" src="{{ profile_image(user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp"><h1 class="align-top fw-bold">
 					{{ user.username }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip" data-bs-placement="top" title="{{ __("squareBracket Partner") }}" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#patch-check-fill"/>
 						</svg>{% endif %}</h1>
 					<p class="fs-4">{{ user.description }}</p>
 			</div>
-			<div class="col-1 text-end">
+						<div class="col-md-1 text-end">
 					<button class="btn btn-warning" type="button" disabled><svg data-bs-toggle="tooltip" data-bs-placement="top" title="{{ __("Subscribe") }}" style="margin-left: 0.75%;" class="bi" width="32" height="32" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus"/>
 						</svg></button>
@@ -42,7 +42,7 @@
 		</div>
 	</div></div>
 	<div class="row">
-	<div class="col-8">
+	<div class="col-md-8 order-2 order-md-1">
 	<div class="card">
   <div class="card-body">
 				<div class="caption">
@@ -56,7 +56,7 @@
 	</div>
 	  </div>
 </div>
-	<div class="col-4">
+	<div class="col-md-4 order-1 order-md-2">
 	<div class="card">
   <div class="card-body">
 	<h4>{{ __("About %s", [user.username]) }}</h4>
