--- a/assets/2006L/styles_yts1162330703.css
+++ b/assets/2006L/styles_yts1162330703.css
@@ -89,7 +89,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 }
 
 .tableSubTitle {
-	padding: 0px 0px 5px 0px;
+	padding: 0 0 5px;
 	border-bottom: 1px dashed #CCC;
 	margin-bottom: 10px;
 	font-size: 14px;
@@ -126,7 +126,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 	background-color: #FFFFCC;
 	background-position: left top;
 	border-bottom: 1px dashed #999999;
-	padding: 10px 10px 0px 10px;
+	padding: 10px 10px 0;
 }
 
 .moduleEntry {
@@ -178,7 +178,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .moduleTitle {
 	font-size: 14px;
 	font-weight: bold;
-	margin: 0px 0px 5px 5px;
+	margin: 0 0 5px 5px;
 	color: #444;
 }
 
@@ -194,7 +194,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 	background-position: left top;
 	background-repeat: repeat-x;
 	border-bottom: 1px dashed #999999;
-	padding: 5px 5px 15px 5px;
+	padding: 5px 5px 15px;
 }
 .moduleFeaturedThumb {
 	border: 5px solid #FFFFFF;
@@ -221,7 +221,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .moduleFrameBarTitle {
 	font-size: 12px;
 	font-weight: bold;
-	margin: 0px 5px 5px 5px;
+	margin: 0 5px 5px;
 	color: #444;
 }
 
@@ -319,12 +319,12 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 }
 
 .pageTable {
-	padding: 0px 5px 0px 5px;
+	padding: 0 5px;
 	margin-bottom: 20px;
 }
 
 .pageText {
-	padding: 0px 5px 0px 5px;
+	padding: 0 5px;
 }
 
 .pageIntro {
@@ -393,7 +393,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .watchDescription {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	padding: 10px 0px 5px 0px;
+	padding: 10px 0 5px;
 	color: #000;
 	border-top: 1px dotted #CCCCCC;
 }
@@ -401,7 +401,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 .watchTags {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	margin: 5px 0px 10px 0px;
+	margin: 5px 0 10px;
 	color: #333333;
 }
 
@@ -472,7 +472,7 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 	font-size: 12px;
 	font-weight: bold;
 	color:#DD8833;
-	margin: 10px 0px 2px 0px;
+	margin: 10px 0 2px;
 }
 
 
@@ -551,9 +551,9 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 	border-bottom: 1px dashed #CCCCCC;		
 }
 .commentButtons td {
-	padding-bottom: 0px;
-	margin-bottom: 0px;
-	border-bottom: 0px
+	padding-bottom: 0;
+	margin-bottom: 0;
+	border-bottom: 0
 }
 
 .commentsSpecifics {
@@ -594,13 +594,13 @@ a.title:hover {font-family: Arial, Helvetica, sans-serif; color: #CCFFFF; font-s
 
 /* msolo remix */
 .roundedTable {
-margin: 0px auto 1em auto;
+margin: 0 auto 1em;
 }
 
 .sunkenTitle {
 	font-size: 14px;
 	font-weight: bold;
-	margin: 0px 0px 5px 5px;
+	margin: 0 0 5px 5px;
 }
 
 .sunkenTitleBar {
@@ -649,20 +649,20 @@ img.videobarthumbnail_white
 }
 
 .tag_list {
-	margin: 1em 0px 0.5em 0px;
+	margin: 1em 0 0.5em;
 	font-weight: bold;
 	color: #333;
 }
 
 .tag_list p {
-	margin: 0px 0px 0.5em 0px;
+	margin: 0 0 0.5em;
 	padding-left: 0.5em;
 	font-weight: normal;
 	color: #999;
 }
 
 .moduleEntry input {
-	margin: 1em 0px 0px 0px;
+	margin: 1em 0 0;
 }
 
 
