--- a/templates/2006L/index.twig
+++ b/templates/2006L/index.twig
@@ -1,138 +1,5 @@
-<!DOCTYPE html>
-	<title>squareBracket - Punny slogan attempting to be simillar to a certain website's slogan</title>
-
-	<link rel="stylesheet" href="/assets/2006l/styles_yts1162330703.css" type="text/css">
-	<link rel="stylesheet" href="/assets/2006l/base_yts1163746048.css" type="text/css">
-	<link rel="icon" href="/assets/2006l/favicon.ico" type="image/x-icon"> <!--- taken from poktube --->
-	<link rel="shortcut icon" href="/assets/2006l/favicon.ico" type="image/x-icon">
-	
-	
-	<meta name="keywords" content="video,sharing,camera phone,video phone">
-
-	<link rel="alternate" title="YouTube - [RSS]" href="/web/20061124193253/http://www.youtube.com/rssls">
-
-	<script type="text/javascript" src="/assets/2006l/ui_yts1161839869.js"></script>
-	<script type="text/javascript" src="/assets/2006l/AJAX_yts1161839869.js"></script>
-	<script type="text/javascript" src="/assets/2006l/watch_queue_yts1161839869.js"></script>
-	
-	<script language="javascript" type="text/javascript"> function _hbLink (a,b) { return false; } </script>
-
-
-</head>
-
-
-<body onload="performOnLoadFunctions();">
-<div id="baseDiv">	
-		<div id="logoTagDiv">
-		<a href="index.php?frontend=2006L" name="&amp;lid=Logo&amp;lpos=GlobalNav"><img src="/assets/2006l/logo_tagline_sm.gif" alt="squareBracket" width="254" height="48" border="0"></a>
-	</div>
-	<div id="utilDiv" style="height:13px;">
-                        <b><a href="/web/20061124193253/http://www.youtube.com/signup" onclick="_hbLink('SignUp','UtilityLinks');">Sign Up</a></b>
-                        <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/my_account">My Account</a>
-                        <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/recently_watched" onclick="_hbLink('ViewingHistory','UtilityLinks');">History</a>
-                        <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/watch_queue?all" onclick="_hbLink('QuickList','UtilityLinks');">QuickList</a>
-			(<span id="quicklist_numb"><a href="/web/20061124193253/http://www.youtube.com/watch_queue?all"><script type="text/javascript">var quicklist_count=0;document.write(quicklist_count);</script>0</a></span>)                        
-                        <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/t/help_center">Help</a>
-                        <span class="utilDelim">|</span>
-                        <a href="/web/20061124193253/http://www.youtube.com/login?next=/" onclick="_hbLink('LogIn','UtilityLinks');">Log In</a>
-        </div>
-        <form name="logoutForm" method="post" action="/web/20061124193253/http://www.youtube.com/index">
-                <input type="hidden" name="action_logout" value="1">
-        </form>
-
-	
-	<div id="searchDiv">
-		<form name="searchForm" id="searchForm" method="get" action="/web/20061124193253/http://www.youtube.com/results">
-		<span class="smallLabel">Search for&nbsp;</span>
-		<input tabindex="10000" type="text" name="search_query" maxlength="128" class="searchField" value="">
-		&nbsp;
-		<input type="submit" name="search" value="Search">
-	</form>
-
-	</div>
-		
-	<table width="100%" cellspacing="0" cellpadding="0" border="0">
-	<tbody><tr><td>
-		<div id="gNavDiv">
-				
-				<div class="ltab">
-				<div class="tabContent selected">
-				<a href="/web/20061124193253/http://www.youtube.com/index" name="&amp;lid=Home&amp;lpos=GlobalNav">Home</a>
-				</div>
-				</div>
-				
-				<div class="tab">
-				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/browse?s=mp" name="&amp;lid=Videos&amp;lpos=GlobalNav">Videos</a>
-				</div>
-				</div>
-				
-				<div class="tab">
-				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/members" name="&amp;lid=Channels&amp;lpos=GlobalNav">Channels</a>
-				</div>
-				</div>
-				
-				<div class="tab">
-				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/groups_main" name="&amp;lid=Groups&amp;lpos=GlobalNav">Groups</a>
-				</div>
-				</div>
-				
-				<div class="tab">
-				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/categories" name="&amp;lid=Categories&amp;lpos=GlobalNav">Categories</a>
-				</div>
-				</div>
-				
-				<div class="rtab">
-				<div class="tabContent">
-				<a href="/web/20061124193253/http://www.youtube.com/my_videos_upload" name="&amp;lid=Upload&amp;lpos=GlobalNav">Upload</a>
-				</div>
-				</div>
-		</div>
-	</td></tr>
-	<tr><td>
-			<div id="gSubNavDiv">
-				&nbsp;
-						<a href="/web/20061124193253/http://www.youtube.com/my_account" onclick="_hbLink('MyAccount','SubNav');">My Account</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_videos" onclick="_hbLink('MyVideos','SubNav');">My Videos</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_favorites" onclick="_hbLink('MyFavorites','SubNav');">My Favorites</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_friends?sort=n" onclick="_hbLink('MyFriends','SubNav');">My Friends</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_messages" onclick="_hbLink('MyInbox','SubNav');">My Inbox</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/subscription_center" onclick="_hbLink('MySubscriptions','SubNav');">My Subscriptions</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/groups_my" onclick="_hbLink('MyGroups','SubNav');">My Groups</a>
-							<span style="padding: 0px 8px;">|</span>
-						<a href="/web/20061124193253/http://www.youtube.com/my_profile" onclick="_hbLink('MyChannel','SubNav');">My Channel</a>
-				&nbsp;
-			</div> <!-- end gSubNavDiv -->
-	</td></tr>
-	</tbody></table>
-
-	
-	
-	
-	
-
-
-
-
-<script type="text/javascript" src="/assets/2006l/components_yts1157352107.js"></script>
-<script type="text/javascript" src="/assets/2006l/AJAX_yts1161839869.js"></script>
-<script type="text/javascript" src="/assets/2006l/video_bar_yts1157352107.js"></script>
-
-<div class="errorBox">The 2006L frontend is not complete.</div>
-
+{% extends "_layout.twig" %}
+{% block content %}
 <div id="hpMainContent"> 
 			<div class="hpContentBlock">
 		<!-- <div id="hpSVidAboutLink"><a href="#">Advertise on YouTube</a></div> -->
@@ -202,7 +69,7 @@
                         document.write('<div id="add_img_{{ video.video_id }}" style="width:20px;margin-top:-29px;margin-left:1px;">');
                 }
                 else {
-                        document.write('<div id="add_img_{{ video.video_id }}" style="width:20px;margin-top:-26px;margin-left:1px;">');
+                        document.write('<div id="add_img_{{ video.video_id }}" style="width:20px;margin-top:-29px;margin-left:1px;">');
                 }
         </script>
         <a href="#" onclick="clicked_add_icon('{{ video.video_id }}', 0);return false;" title="Add Video to QuickList"><img id="add_button_{{ video.video_id }}" onmouseover="mouse_over_add_icon('{{ video.video_id }}');return false;" onmouseout="mouse_out_add_icon('{{ video.video_id }}');return false;" src="/assets/2006l/icn_add_20x20.gif" alt="Add Video to QuickList" border="0"></a>
@@ -263,26 +130,6 @@
 
 	<div class="hpContentBlock">
 		<div id="hpEmbedTopCap">
-		<!-- 300x35 ad block above embed player -->
-	 	
-				
-		
-			
-
-							
-	<!-- begin ad tag -->
-	<script type="text/javascript">
-		ord=Math.random()*10000000000000000 + 4;
-		document.write('<script language="JavaScript" src="https://web.archive.org/web/20061124193253/http://ad.doubleclick.net/adj/you.home/_default;sz=300x35;kch=3000513466;kbg=FFFFFF;kvideoid=2QShD1BsscY;ord=' + ord + '?" type="text/javascript"><\/script>');
-	</script><script language="JavaScript" src="https://web.archive.org/web/20061124193253/http://ad.doubleclick.net/adj/you.home/_default;sz=300x35;kch=3000513466;kbg=FFFFFF;kvideoid=2QShD1BsscY;ord=4654063786008235?" type="text/javascript"></script>
-	<noscript><a href="https://web.archive.org/web/20061124193253/http://ad.doubleclick.net/jump/you.home/_default;sz=300x35;ord=123456789" target="_blank"><img src="https://web.archive.org/web/20061124193253im_/http://ad.doubleclick.net/ad/you.home/_default;sz=300x35;ord=123456789" width="300" height="35" border="0" alt=""></a>
-	</noscript>
-	<!-- End ad tag -->
-	
-
-		
-
-		</div> <!-- end ad block -->
 					<div id="hpEmbedVideo">
 		<object width="300" height="250"><param name="movie" value="/admp.swf?vids=2QShD1BsscY&amp;eurl=/index&amp;iurl=http%3A//sjl-static15.sjl.youtube.com/vi/2QShD1BsscY/2.jpg&amp;t=OEgsToPDskL9yPT3dEXb8c3yxeRQqy-Q"><embed src="/web/20061124193253oe_/http://www.youtube.com/admp.swf?vids=2QShD1BsscY&amp;eurl=/index&amp;iurl=http%3A//sjl-static15.sjl.youtube.com/vi/2QShD1BsscY/2.jpg&amp;t=OEgsToPDskL9yPT3dEXb8c3yxeRQqy-Q" type="application/x-shockwave-flash" width="300" height="250"></object>
 		</div>
@@ -515,100 +362,5 @@
 	
 	
 </div> <!-- end hpSideCol -->
-
-
-
-		<div class="spacer">&nbsp;</div>
-	<div id="footerDiv">
-		<div id="footerContent">
-		<div id="footerLinks">
-			
-			<table width="90%" cellspacing="0" cellpadding="0" border="0" align="center"><tbody><tr valign="top">
-			
-			<td>
-			<div class="footColumnBar">
-				<div class="footLabel">Your&nbsp;&nbsp;Account</div>
-				<div class="footValues">
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/my_videos">Videos</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_favorites">Favorite</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_playlists">Playlists</a>
-					</div>
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/subscription_center">Subscriptions</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_messages">Inbox</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/my_account">more...</a>
-					</div>
-				</div>
-			</div>
-			</td>
-			
-			<td>
-			<div class="footColumnBar">
-				<div class="footLabel">YouTube</div>
-				<div class="footValues">
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/about">About</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/blog">Blog</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/contact">Contact</a>
-					</div>
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/advertise">Advertising</a><br>
-					<a href="https://web.archive.org/web/20061124193253/http://www.pcrecruiter.net/pcrbin/regmenu.exe?uid=youtube.youtube">Jobs</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/press_room">Press</a><br>
-					</div>
-				</div>
-			</div>
-			</td>
-			
-			<td>
-			<div class="footColumn">
-				<div class="footLabel">Help &amp; Info</div>
-				<div class="footValues">
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/help_center">Help Center</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/video_toolbox">Video Toolbox</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/dev">Developer APIs</a>
-					</div>
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/safety">Safety Tips</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/rssls">RSS Syndication</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/community_guidelines">Community Guidelines</a>
-					</div>
-					<div class="column">
-					<a href="/web/20061124193253/http://www.youtube.com/t/terms">Terms of Use</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/privacy">Privacy Policy</a><br>
-					<a href="/web/20061124193253/http://www.youtube.com/t/dmca_policy">Copyright Info</a>
-					</div>
-				</div>
-			</div>
-			</td>
-			
-			</tr></tbody></table>
-			
-		</div> <!-- end footerLinks -->
-		</div> <!-- end footerContent -->
-		
-		<div id="footerSearch">
-			
-			<form name="searchFormFooter" id="searchFormFooter" method="get" action="/web/20061124193253/http://www.youtube.com/results">
-			<span class="smallLabel">Search for&nbsp;</span>
-			<input type="text" name="search_query" maxlength="128" class="searchField" value="">
-			&nbsp;
-			<input type="submit" name="search" value="Search">
-			</form>
-		</div> <!-- end footerSearch -->
-		
-		<div id="footerCopyright">
-			Copyright © 2006 YouTube, Inc.
-		</div> <!-- end footerCopyright -->
-		
-	</div> <!-- end footerDiv -->
-
-</div> <!-- end baseDiv -->
-
-
-
-</body><style id="stylus-9" type="text/css" class="stylus">#wm-ipp-base {
-    min-height: 0px;
-}</style></html>
+</div>
+{% endblock %}
